{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 15,
  "lineage": "e9c45b08-db7d-6bad-0038-300de3ea6048",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110753466187:security-group/sg-05b41f4e3f4fce42d",
            "description": "Allow MySQL access from EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b41f4e3f4fce42d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from EKS cluster security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2bdeed770dd8fa4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "retail-section14-rds-mysql-sg",
            "name_prefix": "",
            "owner_id": "110753466187",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "retail-section14-rds-mysql-sg"
            },
            "tags_all": {
              "Name": "retail-section14-rds-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02047243ee7aead72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110753466187",
            "id": "sg-05b41f4e3f4fce42d",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.terraform_remote_state.eks",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110753466187:security-group/sg-0aaf2d52a392d78ea",
            "description": "Allow EKS cluster to access ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aaf2d52a392d78ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from EKS cluster SG",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2bdeed770dd8fa4"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "retail-section14-redis-sg",
            "name_prefix": "",
            "owner_id": "110753466187",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "retail-section14-redis-sg"
            },
            "tags_all": {
              "Name": "retail-section14-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02047243ee7aead72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110753466187",
            "id": "sg-0aaf2d52a392d78ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.terraform_remote_state.eks",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}